z-index fix attempt

--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -11,7 +11,7 @@
   height: 100%; */
   opacity: 90%;
   background-size: 100%;
-  z-index: 3;
+  z-index: 4;
 }
 
 .Chat-header {
